feat: add account and session management
